<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/background"
    android:padding="16dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="-90dp"
        android:src="@drawable/helphomeicon" />

    <TextView
        android:id="@+id/textOutline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_homee"
        android:textSize="36sp"
        android:textStyle="bold"
        android:gravity="center"
        android:fontFamily="sans-serif-medium"
        android:textColor="#63C1FF"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp" />

    <!-- BOX START -->
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:background="@drawable/box_background"
        android:elevation="4dp">

        <EditText
            android:id="@+id/editLoginEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/editLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginBottom="24dp" />

        <Button
            android:id="@+id/Loginbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/login" />

        <TextView
            android:id="@+id/ToSignUptextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_need_to_sign_up"
            android:gravity="center"
            android:textColor="#63C1FF"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>
    <!-- BOX END -->

</LinearLayout>

